--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
-
-  <style>
-   .box { text-align: center; background-color: #eeeeee; }
-   .centered { display: inline-block; margin: 0; }
-   .chess-board { border-spacing: 0; border-collapse: collapse; }
-   .chess-board th { padding: .5em; }
-   .chess-board td { border: 1px solid; width: 5em; height: 5em; text-align: center; vertical-align: middle; }
-   .chess-board .white { background: white; }
-   .chess-board .black { background: black; }
-  </style>
+ <app-white></app-white>
  <div class="box">
   <div class="centered">
 
@@ -26,91 +17,91 @@
     </tr>
     <tr>
      <th>8</th>
-     <td class="white" id="a8"></td>
-     <td class="black" id="b8"></td>
-     <td class="white" id="c8"></td>
-     <td class="black" id="d8"></td>
-     <td class="white" id="e8"></td>
-     <td class="black" id="f8"></td>
-     <td class="white" id="g8"></td>
-     <td class="black" id="h8"></td>
+     <td class="white" id="a8"><app-white></app-white></td>
+     <td class="black" id="b8"><app-black></app-black></td>
+     <td class="white" id="c8"><app-white></app-white></td>
+     <td class="black" id="d8"><app-black></app-black></td>
+     <td class="white" id="e8"><app-white></app-white></td>
+     <td class="black" id="f8"><app-black></app-black></td>
+     <td class="white" id="g8"><app-white></app-white></td>
+     <td class="black" id="h8"><app-black></app-black></td>
     </tr>
     <tr>
      <th>7</th>
-     <td class="black" id="a7"></td>
-     <td class="white" id="b7"></td>
-     <td class="black" id="c7"></td>
-     <td class="white" id="d7"></td>
-     <td class="black" id="e7"></td>
-     <td class="white" id="f7"></td>
-     <td class="black" id="g7"></td>
-     <td class="white" id="h7"></td>
+     <td class="black" id="a7"><app-black></app-black></td>
+     <td class="white" id="b7"><app-white></app-white></td>
+     <td class="black" id="c7"><app-black></app-black></td>
+     <td class="white" id="d7"><app-white></app-white></td>
+     <td class="black" id="e7"><app-black></app-black></td>
+     <td class="white" id="f7"><app-white></app-white></td>
+     <td class="black" id="g7"><app-black></app-black></td>
+     <td class="white" id="h7"><app-white></app-white></td>
     </tr>
     <tr>
      <th>6</th>
-     <td class="white" id="a6"></td>
-     <td class="black" id="b6"></td>
-     <td class="white" id="c6"></td>
-     <td class="black" id="d6"></td>
-     <td class="white" id="e6"></td>
-     <td class="black" id="f6"></td>
-     <td class="white" id="g6"></td>
-     <td class="black" id="h6"></td>
+     <td class="white" id="a6"><app-white></app-white></td>
+     <td class="black" id="b6"><app-black></app-black></td>
+     <td class="white" id="c6"><app-white></app-white></td>
+     <td class="black" id="d6"><app-black></app-black></td>
+     <td class="white" id="e6"><app-white></app-white></td>
+     <td class="black" id="f6"><app-black></app-black></td>
+     <td class="white" id="g6"><app-white></app-white></td>
+     <td class="black" id="h6"><app-black></app-black></td>
     </tr>
     <tr>
      <th>5</th>
-     <td class="black" id="a5"></td>
-     <td class="white" id="b5"></td>
-     <td class="black" id="c5"></td>
-     <td class="white" id="d5"></td>
-     <td class="black" id="e5"></td>
-     <td class="white" id="f5"></td>
-     <td class="black" id="g5"></td>
-     <td class="white" id="h5"></td>
+     <td class="black" id="a5"><app-black></app-black></td>
+     <td class="white" id="b5"><app-white></app-white></td>
+     <td class="black" id="c5"><app-black></app-black></td>
+     <td class="white" id="d5"><app-white></app-white></td>
+     <td class="black" id="e5"><app-black></app-black></td>
+     <td class="white" id="f5"><app-white></app-white></td>
+     <td class="black" id="g5"><app-black></app-black></td>
+     <td class="white" id="h5"><app-white></app-white></td>
     </tr>
     <tr>
      <th>4</th>
-     <td class="white" id="a4"></td>
-     <td class="black" id="b4"></td>
-     <td class="white" id="c4"></td>
-     <td class="black" id="d4"></td>
-     <td class="white" id="e4"></td>
-     <td class="black" id="f4"></td>
-     <td class="white" id="g4"></td>
-     <td class="black" id="h4"></td>
+     <td class="white" id="a4"><app-white></app-white></td>
+     <td class="black" id="b4"><app-black></app-black></td>
+     <td class="white" id="c4"><app-white></app-white></td>
+     <td class="black" id="d4"><app-black></app-black></td>
+     <td class="white" id="e4"><app-white></app-white></td>
+     <td class="black" id="f4"><app-black></app-black></td>
+     <td class="white" id="g4"><app-white></app-white></td>
+     <td class="black" id="h4"><app-black></app-black></td>
     </tr>
     <tr>
      <th>3</th>
-     <td class="black" id="a3"></td>
-     <td class="white" id="b3"></td>
-     <td class="black" id="c3"></td>
-     <td class="white" id="d3"></td>
-     <td class="black" id="e3"></td>
-     <td class="white" id="f3"></td>
-     <td class="black" id="g3"></td>
-     <td class="white" id="h3"></td>
+     <td class="black" id="a3"><app-black></app-black></td>
+     <td class="white" id="b3"><app-white></app-white></td>
+     <td class="black" id="c3"><app-black></app-black></td>
+     <td class="white" id="d3"><app-white></app-white></td>
+     <td class="black" id="e3"><app-black></app-black></td>
+     <td class="white" id="f3"><app-white></app-white></td>
+     <td class="black" id="g3"><app-black></app-black></td>
+     <td class="white" id="h3"><app-white></app-white></td>
     </tr>
     <tr>
      <th>2</th>
-     <td class="white" id="a2"></td>
-     <td class="black" id="b2"></td>
-     <td class="white" id="c2"></td>
-     <td class="black" id="d2"></td>
-     <td class="white" id="e2"></td>
-     <td class="black" id="f2"></td>
-     <td class="white" id="g2"></td>
-     <td class="black" id="h2"></td>
+     <td class="white" id="a2"><app-white></app-white></td>
+     <td class="black" id="b2"><app-black></app-black></td>
+     <td class="white" id="c2"><app-white></app-white></td>
+     <td class="black" id="d2"><app-black></app-black></td>
+     <td class="white" id="e2"><app-white></app-white></td>
+     <td class="black" id="f2"><app-black></app-black></td>
+     <td class="white" id="g2"><app-white></app-white></td>
+     <td class="black" id="h2"><app-black></app-black></td>
     </tr>
     <tr>
      <th>1</th>
-     <td class="black" id="a1"></td>
-     <td class="white" id="b1"></td>
-     <td class="black" id="c1"></td>
-     <td class="white" id="d1"></td>
-     <td class="black" id="e1"></td>
-     <td class="white" id="f1"></td>
-     <td class="black" id="g1"></td>
-     <td class="white" id="h1"></td>
+     <td class="black" id="a1"><app-black></app-black></td>
+     <td class="white" id="b1"><app-white></app-white></td>
+     <td class="black" id="c1"><app-black></app-black></td>
+     <td class="white" id="d1"><app-white></app-white></td>
+     <td class="black" id="e1"><app-black></app-black></td>
+     <td class="white" id="f1"><app-white></app-white></td>
+     <td class="black" id="g1"><app-black></app-black></td>
+     <td class="white" id="h1"><app-white></app-white></td>
     </tr>
    </tbody>
   </table>
